<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/etUsernameSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etPasswordSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etUsernameSignup"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSignupDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPasswordSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/signup" />

</RelativeLayout>