<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailActivity">

    <FrameLayout
        android:id="@+id/flImagePostDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/black">
        <ImageView
            android:id="@+id/ivImagePostDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@android:drawable/sym_def_app_icon"
            android:contentDescription="@string/description"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvUsernameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flImagePostDetail"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/feed_username"/>

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/tvUsernameDetail"
        android:layout_below="@id/flImagePostDetail"
        android:layout_alignParentEnd="true"
        android:gravity="end"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/createdAt"/>
    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCreatedAt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/loremipsum"/>

</RelativeLayout>