<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/instagram_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon"/>

    <EditText
        android:id="@+id/login_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/instagram_icon"
        android:hint="@string/login_username"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username"
        android:layout_centerHorizontal="true"
        android:hint="@string/login_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/login_password"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />



</RelativeLayout>